Modifying email for Travis notification

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ notifications:
     recipients:
     - gesiel.was.f@gmail.com
     - vinisilvacar@gmail.com
-    - viny.pinheiro@gmail.com.br
+    - viny.pinheiro.1995@gmail.com
     - caiofelipe147@gmail.com
     - lucasandradeunb@gmail.com
     - joaopaulo.busche@gmail.com
