--- a/SIGS/Gemfile
+++ b/SIGS/Gemfile
@@ -6,7 +6,6 @@ git_source(:github) do |repo_name|
 end
 
 gem 'simplecov' , :require => false  , :group => :test
-gem 'rspec-rails'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.0.2'
 # Use mysql as the database for Active Record
@@ -43,6 +42,10 @@ gem 'autoprefixer-rails'
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platform: :mri
+  gem 'cucumber-rails', :require => false
+  gem 'rspec-rails'
+  gem 'database_cleaner'
+  gem 'selenium-webdriver'
 end
 
 group :development do
