--- a/SIGS/config/database.yml
+++ b/SIGS/config/database.yml
@@ -24,7 +24,7 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: &test
   <<: *default
   database: SIGS_test
 
@@ -52,3 +52,6 @@ production:
   database: SIGS_production
   username: SIGS
   password: <%= ENV['SIGS_DATABASE_PASSWORD'] %>
+
+cucumber:
+  <<: *test
