implements acceptance tests of request registration and keep session

--- a/SIGS/Gemfile
+++ b/SIGS/Gemfile
@@ -44,9 +44,11 @@ group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platform: :mri
   gem 'cucumber-rails', :require => false
+  gem 'launchy'
   gem 'rspec-rails'
+  #gem 'capybara'
   gem 'database_cleaner'
-  gem 'selenium-webdriver'
+  #gem 'selenium-webdriver', '~> 2.53'
 end
 
 group :development do
