--- a/SIGS/Gemfile
+++ b/SIGS/Gemfile
@@ -54,6 +54,7 @@ group :development, :test do
   #gem 'capybara'
   gem 'database_cleaner'
   #gem 'selenium-webdriver', '~> 2.53'
+  gem 'coveralls', require: false
 end
 
 group :development do
