Install gem rubocop to use

--- a/SIGS/.rubocop.yml
+++ b/SIGS/.rubocop.yml
@@ -25,7 +25,7 @@ Style/Encoding:
 Style/FrozenStringLiteralComment:
   EnforcedStyle: always
 
-Layout/IndentHeredoc:
+Style/IndentHeredoc:
   EnforcedStyle: powerpack
 
 Lint/AmbiguousBlockAssociation:
