--- a/SIGS/Gemfile
+++ b/SIGS/Gemfile
@@ -6,6 +6,9 @@ git_source(:github) do |repo_name|
 end
 
 ruby "2.3.1"
+
+gem 'rubocop', '~> 0.48.1', require: false
+
 gem 'simplecov' , :require => false  , :group => :test
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.0.2'
