--- a/SIGS/Gemfile
+++ b/SIGS/Gemfile
@@ -45,6 +45,9 @@ gem 'bootstrap-sass', '~> 3.2.0'
 gem 'autoprefixer-rails'
 gem 'data-confirm-modal', '~> 1.1', '>= 1.1.1'
 
+# Icons
+gem 'font-awesome-sass'
+
 group :production do
   gem 'rails_12factor'
 end
