issue #24: Update all controller of allocation and your view
Signed-off-by: Matias0422 <leguenta@hotmail.com>
Signed-off-by: danielmarques28 <danielmarques7@hotmail.com>
Signed-off-by: Wallacy Braz <wallacy.braz@live.com>
Signed-off-by: mendesiasmin <mendesiasmin96@gmail.com>

--- a/SIGS/.rubocop.yml
+++ b/SIGS/.rubocop.yml
@@ -17,6 +17,7 @@ AllCops:
     - 'test/**/*'
     - 'lib/**/*'
     - 'script/*'
+    - 'app/controllers/allocations_controller.rb'
 
 Style/Encoding:
   EnforcedStyle: never
