issue #44: generate multiples pages in room report pdf

--- a/SIGS/.gitignore
+++ b/SIGS/.gitignore
@@ -10,8 +10,10 @@
 # Ignore all logfiles, tempfiles and coverage.
 /log/*
 /tmp/*
+/public/reports
 !/log/.keep
 !/tmp/.keep
+!/public/reports/.keep
 *~
 /coverage/*
 /coverage
