--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,10 @@
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
+/SIGS/public/reports
 !/log/.keep
 !/tmp/.keep
+!/SIGS/public/reports/.keep
 
 # Ignore Byebug command history file.
 .byebug_history
