--- a/SIGS/Gemfile
+++ b/SIGS/Gemfile
@@ -7,6 +7,8 @@ end
 
 ruby "2.3.1"
 
+gem 'prawn-table'
+
 gem 'rubocop', '~> 0.48.1', require: false
 
 gem 'simplecov' , :require => false  , :group => :test
