issue#44: Unit test of room report

--- a/SIGS/Gemfile
+++ b/SIGS/Gemfile
@@ -9,6 +9,10 @@ ruby "2.3.1"
 # Gem to generate PDF
 gem 'prawn-table'
 
+#Gem to test pdf
+gem 'pdf-inspector', :group => :test, require: "pdf/inspector"
+gem 'pdf-reader', :group => :test
+
 gem 'rubocop', '~> 0.48.1', require: false
 
 gem 'simplecov' , :require => false  , :group => :test
