issue #71: Update method index of solicitations controller and your view

--- a/SIGS/.rubocop.yml
+++ b/SIGS/.rubocop.yml
@@ -17,6 +17,7 @@ AllCops:
     - 'test/**/*'
     - 'lib/**/*'
     - 'script/*'
+    - 'app/controllers/solicitations_controller.rb'
 
 Style/Encoding:
   EnforcedStyle: never
