issue #82 Create unit tests for api find allcations by department Signed-of-by Daniel Marques <danielmarques7@hotmail.com>

--- a/SIGS/Gemfile
+++ b/SIGS/Gemfile
@@ -65,6 +65,7 @@ group :development, :test do
   gem 'byebug', platform: :mri
   gem 'cucumber-rails', :require => false
   gem 'launchy'
+  gem 'rspec'
   gem 'rspec-rails'
   gem 'rails-controller-testing'
   #gem 'capybara'
