Dockerizing the Application

--- a/SIGS/config/database.yml
+++ b/SIGS/config/database.yml
@@ -14,8 +14,9 @@ default: &default
   encoding: utf8
   pool: 5
   username: root
-  password: 
+  password:
   socket: /var/run/mysqld/mysqld.sock
+  host: db
 
 development:
   <<: *default
