--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,10 @@ services:
 
   web:
     build: .
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    command: /bin/bash -l -c "chmod +x start-dev.sh && ./start-dev.sh"
     volumes:
       - ./SIGS:/SIGS-MES
+      - ./start-dev.sh:/SIGS-MES/start-dev.sh
     ports:
       - "3000:3000"
     links:
