--- a/SIGS/.rubocop.yml
+++ b/SIGS/.rubocop.yml
@@ -46,3 +46,7 @@ Metrics/BlockLength:
 Metrics/ModuleLength:
   Exclude:
     - 'spec/**/*.rb'
+
+Metrics/ClassLength:
+  Exclude:
+    - "app/controllers/rooms_controller.rb"
